@@ -1,0 +1,3 @@
+PHP is a programming language designed to be embedded into web pages.
+The XSL extension implements the XSL standard, performing XSLT transformations
+using the libxslt library. PHP5 XSL extension replaces PHP4 XSLT extension.
